# knowledge

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _quarto.yml  _toc.yml  docker-compose.yml  dockerfile  environment.yml  genindex.html  index.qmd  intro.html  intro.md  list_to_learn.txt  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  styles.css
.doctrees/: README.doctree  environment.pickle  intro.doctree
.ipynb_checkpoints/: _quarto-checkpoint.yml  index-checkpoint.qmd  list_to_learn-checkpoint.txt
Docker/: access.ipynb  containers.ipynb  docker_commands.html  docker_commands.ipynb  docker_compose.html  docker_file_instructions.html  docker_file_instructions.ipynb  docker_volumes.html  docker_volumes.ipynb  image_creation.html  image_creation.ipynb  images.ipynb  logs.html  logs.ipynb  network.html  network.md  networks.ipynb  overview.html  overview.ipynb  ports.ipynb  postgres.ipynb  sources.html  volumes.ipynb
_site/: about.html  index.html  search.json
_sources/: README.md  intro.md
algorithms/: binary_search.html  binary_search.ipynb  complexity.html  complexity.ipynb  data_structures.html  data_structures.ipynb  dynamic_prog.html  dynamic_prog.ipynb  emergency_task.ipynb  event_sort.html  event_sort.ipynb  intro.html  intro.ipynb  quick_sort.html  quick_sort.ipynb  specific_tasks.html  trees.html  trees.ipynb
dash/: callbacks.ipynb  components.ipynb  ready_solutions.ipynb  select_all.ipynb  select_clear_all.ipynb
data_science/: arima.html  arima.ipynb  classic_models.html  classic_models.ipynb  confusion_matrix.html  decision_tree.html  decision_tree.ipynb  dl_mechanisms.html  dl_mechanisms.ipynb  intro.html  intro.ipynb  metrics.html  nlp.html  (+11 more)
(+3296 files in other folders)
