[build-system]
requires = ["hatchling", "ipykernel"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "0.0.0"
dependencies = [
    "flake8",
    "ipykernel",
    "typeguard==4.4.2",
    "clickhouse_connect==0.8.17",
    "psycopg[binary]==3.2.6",
    "docker==7.1.0",
    "tabulate==0.9.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec" = "share/jupyter/kernels/universal_sql"
